# app/Models/Concert.php
@@ -6,6 +6,7 @@ use Spatie\MediaLibrary\HasMedia;
 use Illuminate\Database\Eloquent\Model;
 use Spatie\MediaLibrary\InteractsWithMedia;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
 class Concert extends Model implements HasMedia
 {
@@ -13,6 +14,7 @@ class Concert extends Model implements HasMedia
     use InteractsWithMedia;
 
     protected $fillable = [
+        'event_name',
         'club_id',
         'added_by_user_id',
         'description',
@@ -23,4 +25,14 @@ class Concert extends Model implements HasMedia
         'liveset_url',
         'is_expired'
     ];
+
+    public function club(): BelongsTo
+    {
+        return $this->belongsTo(Club::class, 'club_id', 'id');
+    }
+
+    public function author(): BelongsTo
+    {
+        return $this->belongsTo(User::class, 'added_by_user_id', 'id');
+    }
 }
